# dcos-k8s-rust-skaffold-demo

./: .dockerignore  .env  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  skaffold-deployment.yaml  skaffold.yaml
dcos/: kubernetes-options.json
k8s/: ingress-nginx.yaml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/: api.rs  errors.rs  forms.rs  main.rs  models.rs  postgres.rs  schema.rs
